Config/adjust coverage test suport (#64)
* adjust coverage ide suport.

* fix sonar plugin.

* ignore structure modules.

* fix detekt.

* update SDK workflow GitAction.

* disable cache to tests.

* fix Linux ref name lowercase.