@@ -21,6 +21,15 @@ class AndroidLibraryTestConventionPlugin : Plugin<Project> {
                 testOptions {
                     unitTests.isReturnDefaultValues = true
                     unitTests.isIncludeAndroidResources = true
+                    unitTests.all { test ->
+                        test.jvmArgs(
+                            "-Xverify:none",
+                            "--add-opens", "java.base/java.lang=ALL-UNNAMED",
+                            "--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED",
+                            "--add-opens", "java.base/java.io=ALL-UNNAMED",
+                            "--add-opens", "java.base/java.util=ALL-UNNAMED",
+                        )
+                    }
                 }
             }
 
